PN-5377: sviluppi validazione PEC
