# docs/openapi/pn-address-book-api-internal.yaml
@@ -122,7 +122,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/LegalDigitalAddress'
+                  $ref: '#/components/schemas/LegalAndUnverifiedDigitalAddress'
         '400':
           description: Invalid input
           content:
@@ -151,7 +151,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/CourtesyDigitalAddress'
+                  $ref: '#/components/schemas/CourtesyAndUnverifiedDigitalAddress'
         '400':
           description: Invalid input
           content:
@@ -188,7 +188,12 @@ paths:
               $ref: '#/components/schemas/AddressVerification'
       responses:
         '200':
-          description: Verification by Code needed. This response is sent when the address provided need to be verified.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddressVerificationResponse'
+          description: >
+            Nell'oggetto c'è la motivazione di quanto richiesto per procedere
         '204':
           description: successful operation
         '400':
@@ -198,7 +203,11 @@ paths:
               schema:
                 $ref: 'remote-refs.yaml#/components/schemas/Problem'
         '422':
-          description: Verification code failure
+          description: >
+            This error is caused by one of this events:
+            * Verification code failure: error.detail equals to PN_USERATTRIBUTES_INVALIDVERIFICATIONCODE
+            * Verification code max attempt reached: error.detail equals to PN_USERATTRIBUTES_RETRYLIMITVERIFICATIONCODE
+            * Verification code expired/notfound: error.detail equals to PN_USERATTRIBUTES_EXPIREDVERIFICATIONCODE
           content:
             application/problem+json:
               schema:
@@ -255,7 +264,13 @@ paths:
               $ref: '#/components/schemas/AddressVerification'
       responses:
         '200':
-          description: Verification by Code needed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddressVerificationResponse'
+          description: >
+            Nell'oggetto c'è la motivazione di quanto richiesto per procedere
+            (se il codice di verifica o se la validazione della pec)
         '204':
           description: successful operation
         '400':
@@ -338,24 +353,40 @@ components:
   schemas:
     AddressVerification:
       type: object
-      required:
-        - value
+      description: richiede value oppure requestId di un indirizzo in corso di validazione
       properties:
         value:
           type: string
           maxLength: 50
           #Tel. number or email address
           pattern: ^(((00|\+)393\d{8,9})|([a-zA-Z0-9]+(?:[.\-_][a-zA-Z0-9]+){0,10}@[a-zA-Z0-9]+(?:[.-][a-zA-Z0-9]+){0,10}(?:\.[a-zA-Z0-9]{2,10}))|(ENABLED)|(DISABLED))$
+        requestId:
+          type: string
+          maxLength: 64
+          #ASCII printable chars
+          pattern: ^[ -~ ]*$
         verificationCode:
           $ref: '#/components/schemas/VerificationCode'
-
+    AddressVerificationResponse:
+        type: object
+        required:
+          - result
+        properties:
+          result:
+            type: string
+            description: >
+              Uno dei seguenti valori
+              - CODE_VERIFICATION_REQUIRED: indica che è richiesto il codice di verifica
+              - PEC_VALIDATION_REQUIRED: indica che il codice di verifica inserito è valido, ma che non è ancora arrivata la conferma PEC (solo per la PEC)
+            enum:
+              - CODE_VERIFICATION_REQUIRED
+              - PEC_VALIDATION_REQUIRED
     BaseDigitalAddress:
       type: object
       required:
         - addressType
         - recipientId
         - channelType
-        - value
       properties:
         addressType:
           type: string
@@ -372,9 +403,6 @@ components:
           example: 'abc'
         channelType:
           type: string
-        value:
-          type: string
-          example: 'nome.utente@server.it'
         code:
           $ref: '#/components/schemas/VerificationCode'
 
@@ -385,7 +413,30 @@ components:
         - PEC
         - APPIO
 
+    LegalAddressType:
+      type: string
+      description: Valore addresstype per legal
+      enum:
+        - LEGAL
+
     LegalDigitalAddress:
+      allOf:
+        - $ref: '#/components/schemas/BaseDigitalAddress'
+        - type: object
+          required:
+            - addressType
+            - channelType
+            - value
+          properties:
+            addressType:
+              $ref: '#/components/schemas/LegalAddressType'
+            value:
+              type: string
+              example: 'nome.utente@server.it'
+            channelType:
+              $ref: '#/components/schemas/LegalChannelType'
+
+    LegalAndUnverifiedDigitalAddress:
       allOf:
         - $ref: '#/components/schemas/BaseDigitalAddress'
         - type: object
@@ -394,12 +445,18 @@ components:
             - channelType
           properties:
             addressType:
+              $ref: '#/components/schemas/LegalAddressType'
+            value:
               type: string
-              enum:
-                - LEGAL
-
+              example: 'nome.utente@server.it'
             channelType:
               $ref: '#/components/schemas/LegalChannelType'
+            requestId:
+              type: string
+            codeValid:
+              type: boolean
+            pecValid:
+              type: boolean
 
     CourtesyChannelType:
       type: string
@@ -409,7 +466,30 @@ components:
         - SMS
         - APPIO
 
+    CourtesyAddressType:
+      type: string
+      description: Valore addresstype per courtesy
+      enum:
+        - COURTESY
+
     CourtesyDigitalAddress:
+      allOf:
+        - $ref: '#/components/schemas/BaseDigitalAddress'
+        - type: object
+          required:
+            - addressType
+            - channelType
+            - value
+          properties:
+            addressType:
+              $ref: '#/components/schemas/CourtesyAddressType'
+            value:
+              type: string
+              example: 'nome.utente@server.it'
+            channelType:
+              $ref: '#/components/schemas/CourtesyChannelType'
+
+    CourtesyAndUnverifiedDigitalAddress:
       allOf:
         - $ref: '#/components/schemas/BaseDigitalAddress'
         - type: object
@@ -418,11 +498,16 @@ components:
             - channelType
           properties:
             addressType:
+              $ref: '#/components/schemas/CourtesyAddressType'
+            value:
               type: string
-              enum:
-                - COURTESY
+              example: 'nome.utente@server.it'
             channelType:
               $ref: '#/components/schemas/CourtesyChannelType'
+            requestId:
+              type: string
+            codeValid:
+              type: boolean
 
     UserAddresses:
       type: object
@@ -430,11 +515,11 @@ components:
         legal:
           type: array
           items:
-            $ref: '#/components/schemas/LegalDigitalAddress'
+            $ref: '#/components/schemas/LegalAndUnverifiedDigitalAddress'
         courtesy:
           type: array
           items:
-            $ref: '#/components/schemas/CourtesyDigitalAddress'
+            $ref: '#/components/schemas/CourtesyAndUnverifiedDigitalAddress'
 
     VerificationCode:
       type: string
