# src/main/java/it/pagopa/pn/user/attributes/mapper/AddressBookEntityToCourtesyDigitalAddressDtoMapper.java
@@ -1,5 +1,6 @@
 package it.pagopa.pn.user.attributes.mapper;
 
+import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyAddressTypeDto;
 import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyChannelTypeDto;
 import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyDigitalAddressDto;
 import it.pagopa.pn.user.attributes.middleware.db.entities.AddressBookEntity;
@@ -16,7 +17,7 @@ public class AddressBookEntityToCourtesyDigitalAddressDtoMapper {
         CourtesyDigitalAddressDto dto = new CourtesyDigitalAddressDto();
         dto.setRecipientId(entity.getRecipientId());
         dto.setChannelType(CourtesyChannelTypeDto.fromValue(entity.getChannelType()));
-        dto.setAddressType(CourtesyDigitalAddressDto.AddressTypeEnum.fromValue(entity.getAddressType()));
+        dto.setAddressType(CourtesyAddressTypeDto.COURTESY);
         dto.senderId(entity.getSenderId());
 
         return  dto;
