# src/main/java/it/pagopa/pn/user/attributes/mapper/CourtesyDigitalAddressDtoToCourtesyAndUnverifiedDigitalAddressDtoMapper.java
@@ -1,0 +1,26 @@
+package it.pagopa.pn.user.attributes.mapper;
+
+import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyAddressTypeDto;
+import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyAndUnverifiedDigitalAddressDto;
+import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CourtesyDigitalAddressDto;
+
+
+public class CourtesyDigitalAddressDtoToCourtesyAndUnverifiedDigitalAddressDtoMapper {
+
+    private CourtesyDigitalAddressDtoToCourtesyAndUnverifiedDigitalAddressDtoMapper(){
+        super();
+    }     
+
+    public static CourtesyAndUnverifiedDigitalAddressDto toDto(CourtesyDigitalAddressDto entity) {
+        CourtesyAndUnverifiedDigitalAddressDto dto = new CourtesyAndUnverifiedDigitalAddressDto();
+        dto.setRecipientId(entity.getRecipientId());
+        dto.setChannelType(entity.getChannelType());
+        dto.setAddressType(CourtesyAddressTypeDto.COURTESY);
+        dto.senderId(entity.getSenderId());
+        dto.setValue(entity.getValue());
+        dto.setSenderName(entity.getSenderName());
+        dto.setCodeValid(true);
+
+        return  dto;
+    }
+}
