# src/main/java/it/pagopa/pn/user/attributes/middleware/db/entities/VerificationCodeEntity.java
@@ -25,12 +25,15 @@ public class VerificationCodeEntity extends BaseEntity {
     private static final int SK_ITEMS_CHANNEL_TYPE = 1;
 
 
-    public VerificationCodeEntity(String recipientId, String address, String channelType){
+    public VerificationCodeEntity(String recipientId, String address, String channelType, String senderId){
         this.setSk(address + ITEMS_SEPARATOR + (channelType==null?"":channelType));
         this.setPk(PK_PREFIX + recipientId);
         this.pecValid = false;
         this.codeValid = false;
         this.failedAttempts = 0;
+        if (senderId == null)
+            senderId = AddressBookEntity.SENDER_ID_DEFAULT;
+        this.senderId = senderId;
     }
 
     @DynamoDbIgnore
@@ -58,6 +61,8 @@ public class VerificationCodeEntity extends BaseEntity {
     @Getter(onMethod=@__({@DynamoDbAttribute("requestId")}))  private String requestId;
 
     @Getter(onMethod=@__({@DynamoDbAttribute("senderId")}))  private String senderId;
+
+    @Getter(onMethod=@__({@DynamoDbAttribute("pecAddress")}))  private String pecAddress;
 
     @Getter(onMethod=@__({@DynamoDbAttribute("ttl")}))  private long ttl;
 }
