# src/main/java/it/pagopa/pn/user/attributes/rest/v1/LegalAddressController.java
@@ -6,10 +6,7 @@ import it.pagopa.pn.commons.log.PnAuditLogEventType;
 import it.pagopa.pn.user.attributes.exceptions.PnAddressNotFoundException;
 import it.pagopa.pn.user.attributes.exceptions.PnInvalidVerificationCodeException;
 import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.api.LegalApi;
-import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.AddressVerificationDto;
-import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.CxTypeAuthFleetDto;
-import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.LegalChannelTypeDto;
-import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.LegalDigitalAddressDto;
+import it.pagopa.pn.user.attributes.generated.openapi.server.rest.api.v1.dto.*;
 import it.pagopa.pn.user.attributes.services.AddressBookService;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
@@ -66,7 +63,7 @@ public class LegalAddressController implements LegalApi {
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<LegalDigitalAddressDto>>> getLegalAddressByRecipient(String recipientId,
+    public Mono<ResponseEntity<Flux<LegalAndUnverifiedDigitalAddressDto>>> getLegalAddressByRecipient(String recipientId,
                                                                                          CxTypeAuthFleetDto pnCxType,
                                                                                          List<String> pnCxGroups,
                                                                                          String pnCxRole,
@@ -82,14 +79,14 @@ public class LegalAddressController implements LegalApi {
     }
 
     @Override
-    public Mono<ResponseEntity<Void>> postRecipientLegalAddress(String recipientId,
-                                                                CxTypeAuthFleetDto pnCxType,
-                                                                String senderId,
-                                                                LegalChannelTypeDto channelType,
-                                                                Mono<AddressVerificationDto> addressVerificationDto,
-                                                                List<String> pnCxGroups,
-                                                                String pnCxRole,
-                                                                ServerWebExchange exchange) {
+    public Mono<ResponseEntity<AddressVerificationResponseDto>> postRecipientLegalAddress(String recipientId,
+                                                                                          CxTypeAuthFleetDto pnCxType,
+                                                                                          String senderId,
+                                                                                          LegalChannelTypeDto channelType,
+                                                                                          Mono<AddressVerificationDto> addressVerificationDto,
+                                                                                          List<String> pnCxGroups,
+                                                                                          String pnCxRole,
+                                                                                          ServerWebExchange exchange) {
 
         return addressVerificationDto
                 .map(addressVerificationDto1 -> {
@@ -114,8 +111,11 @@ public class LegalAddressController implements LegalApi {
                                     })
                                     .map(m -> {
                                         log.info("postRecipientLegalAddress done - recipientId={} - senderId={} - channelType={} res={}", recipientId, senderId, channelType, m.toString());
-                                        if (m == AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED) {
-                                            return ResponseEntity.ok().build();
+
+                                        if (m != AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS) {
+                                            AddressVerificationResponseDto responseDto = new AddressVerificationResponseDto();
+                                            responseDto.result(AddressVerificationResponseDto.ResultEnum.fromValue(m.toString()));
+                                            return ResponseEntity.ok(responseDto);
                                         } else {
                                             tupleVerCodeLogEvent.getT2().ifPresent(pnAuditLogEvent -> pnAuditLogEvent.generateSuccess().log());
                                             return ResponseEntity.noContent().build();
